--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -752,3 +752,4 @@ en:
     save_failed: <strong>Failed to save your changes</strong>
     stale_record: This record has been updated by another user. Please refresh the page to access the latest version.
     other_editors: "This record is currently being edited by another user.  Please contact the following users to ensure no conflicts occur: <strong>%{user_ids}</strong>"
+    repository_changed: "This record can't be saved, because your active repository has changed. To save this record, open another window and reset your active repository."
