--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -202,6 +202,7 @@ en:
         <p>The Agent related to the material described in the record.</p>
         <p>Agents may be searched using auto-complete, using a browse function, or may be created on demand.</p> 
     terms: Terms
+    title: Title
     _singular: Agent Link
     _plural: Agent Links
 
