a low tech approach to providing a link to an external document from the edit view, also fixed a minor issue with the show view where the location contains a uri but also some cruft

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -855,6 +855,7 @@ en:
     publish: Publish?
     publish_tooltip: |
         <p>Determines whether this External Document is published to public (patron) interfaces.</p>
+    document_link: Document Link
     _plural: External Documents
     _singular: External Document
 
