--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -729,6 +729,7 @@ en:
       success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
       no_rows: Please enter values for at least one row
       rows_with_errors: "%{count} row(s) with an error - click a row field to view the errors for that row"
+      rows_no_errors: "All rows are valid"
       error_summary_header: "Errors in row:"
     help:
       keyboard_shortcuts: |
