Add file_version to the DO RDE

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -697,6 +697,7 @@ en:
       date: Date
       instance: Instance
       notes: Notes
+      file_version: File Version
     actions:
       add_row: Add Row
       add_rows: Add Rows
