Add subjects as a field in the advanced public search

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -46,6 +46,7 @@ en:
       repository: Repository
       creators: Creator
       fullrecord: Keyword
+      subjects: Subject
       title: Title
       creator: Creator
       scope: Scope
