add four sort fields to locations index

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -149,6 +149,10 @@ en:
     event_type: Type
     identifier: Identifier
     select: Select
+    building: Building
+    floor: Floor
+    room: Room
+    area: Area
 
   become-user:
     become-user: Become User
