tweaking public UI to behave more like staff ui in sort labels https://www.pivotaltracker.com/story/show/62551360

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -57,12 +57,24 @@ en:
 
   search_sorting:
     sort_by: "Sort by:"
+    and: "and:"
     asc: Ascending
     desc: Descending
     relevance: Relevance
     title_sort: Title
     user_mtime: Modified
+    primary_type: Record Type
+    processing_priority: Priority
+    processing_status: Status
+    parent_id: Record Type
     create_time: Created
+    authority_id: Authority ID
+    source: Source
+    rules: Rules
+    outcome: Outcome
+    event_type: Type
+    identifier: Identifier
+    select: Select
 
   errors:
     error_404: Record Not Found
