--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -177,7 +177,8 @@ en:
     manage_groups: Manage Groups
     manage_users: Manage Users
     manage_enumerations: Manage Controlled Value Lists
-    manage_preferences: Preferences
+    global_preferences: Global Preferences
+    repo_preferences: Repository Preferences
     manage_user_access: Manage User Access
     logout: Logout
     login: Sign In
