--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1730,6 +1730,8 @@ en:
     you_must_provide_a_label__title_or_date: you must provide a Label, Title or Date
     location_fields_error: >
       You must either specify a barcode, a classification, or both a coordinate 1 label and coordinate 1 indicator
+    location_must_be_unique_within_a_record: Must be unique within a record
+
   job:
     _singular: Import Job
     _plural: Import Jobs
