tidying up for release of just show_suppressed and global prefs only

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1689,13 +1689,13 @@ en:
 
   preference: &preference_attributes
     defaults: Defaults
-    global: Global Preferences
+    global: User Preferences
     repo: Repository Preferences
     _singular: Preferences
     _plural: Preferences
 
   defaults: &defaults_attributes
-    show_suppressed: Show Suppressed
+    show_suppressed: Show Suppressed?
     show_suppressed_tooltip: Whether to show suppressed records that you have permission to see when browsing.
     _singular: Defaults
     _plural: Defaults
