Add backend endpoint for loction deletion. If location has links then raise an exception.
Add delete to the location frontend toolbar, controller and routes.

If an error is displayed in the linker form (when creating a new record), focus the form on this error.  It was easy to miss.  Also show the error messages for a location on the form (rather than the top level new/edit templates).

Refactor the JSONModelI18nMixin to allow for a single message to be I18n'ed on demand

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -532,6 +532,7 @@ en:
         batch: Batch Locations
         save: Save Location
         single: Single Location
+        delete_confirm_message: "<p>Please be aware you <strong>cannot undo this action.</strong>.</p><p> If this Location is currently linked to one or more instances it cannot be deleted.</p>"
 
   location_batch:
     _frontend:
