--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1744,6 +1744,7 @@ en:
     location_fields_error: >
       You must either specify a barcode, a classification, or both a coordinate 1 label and coordinate 1 indicator
     location_must_be_unique_within_a_record: Must be unique within a record
+    location_cannot_be_deleted_if_linked: Location Record is currently linked to one or more Instance records and cannot be deleted. Please link these instances to new locations before deleting the location record.
 
   job:
     _singular: Import Job
