If an event is suppressed, show a message on the readonly form and redirect to this page when trying to edit the event.
When events are listed on a record (as a linked record), only show the edit action if the event isn't suppressed.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -471,6 +471,7 @@ en:
         created: Event Created
         updated: Event Saved
         deleted: Event Deleted
+        suppressed_info: Event is suppressed and cannot be edited
       section:
         basic_information: Basic Information
         date: Event Date/Time
