Explicitly check if a location has any relationship models in the object graph before deleting.
Fix exception when indexing locations that have a value for 'classification'.  The resolver expected the resolving attribute values to be hashes.

When indexing an Accession, index whether they have any locations too.  Add a migration to force index these records.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -522,6 +522,7 @@ en:
       messages:
         created: Location Created
         updated: Location Saved
+        deleted: Location Deleted
       section:
         basic_information: Basic Information
         search_embedded: Linked Records
