--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1702,6 +1702,8 @@ en:
   defaults: &defaults_attributes
     show_suppressed: Show Suppressed?
     show_suppressed_tooltip: Whether to show suppressed records that you have permission to see when browsing.
+    publish: Publish?
+    publish_tooltip: Whether to publish new records by default.
     _singular: Defaults
     _plural: Defaults
 
