--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -433,6 +433,8 @@ en:
     sort_name_tooltip: |
         <p>A version of the name concatenating all the parts of the name provided in a given agent record. Used for display purposes in the application and for some exports.</p>
         <p>The sort name may be edited by unchecking the "Automatically generate" checkbox and then entering the form of the sort name desired.</p>
+    authorized: Authorized
+    is_display_name: Display Name
     _singular: Name
     _plural: Names
 
