--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -559,6 +559,8 @@ en:
         use_date: Date(s) of Name Use
       action:
         add: Add Name Form
+        make_authorized: Make Authoritive Name
+        make_display_name: Make Display Name
 
   note:
     _frontend:
