Change 'Add Item' to 'Add Event' in the context of a Chronology note

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -648,6 +648,7 @@ en:
     <<: *note_attributes
     option: Chronology
     title: Title
+    items: Events
 
   chronology_item:
     event_date: Event Date
