--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -577,7 +577,7 @@ en:
         add_note_orderedlist: Add Item
         add_sub_note: Add Sub Note
         add_note_index_item: Add Item
-        add_note_chronology_item: Add Item
+        add_note_chronology_item: Add Event
         add_event: Add Event
         add_note_bibliography_item: Add Item
         add_note_outline_level_item: Add Item
