--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -71,7 +71,7 @@ en:
     merge: Merge
     form_changes_message: "<small><span class='muted'>You have unsaved changes</span></small>"
     toolbar_disabled_message: "<small><span class='muted'>You have unsaved changes - Save or Revert to access toolbar</span></small>"
-    publish: Publish
+    publish: Publish All
     publish_confirm_title: Publish?
     publish_confirm_message: "<p>Performing this action will publish this record, any sub-records (External Documents, Notes, etc) and all components in the hierarchy.</p>"
     view_search_results: Go to Search Results
