enable repository level preferences

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1697,8 +1697,14 @@ en:
 
   preference: &preference_attributes
     defaults: Defaults
-    global: User Preferences
-    repo: Repository Preferences
+    global: Global Preference Defaults
+    global_message: Edit these values to set system-wide user preference defaults. These values can be overridden by repository defaults or a user's own preferences.
+    repo: User Preference Defaults
+    repo_message: Edit these values to set user preference defaults for the current repository. These values can be overridden by a user's own preferences.
+    user_global: My Global Preferences
+    user_global_message: Edit these values to set your system-wide user preferences. These values can be overridden by repository defaults or by your own preferences for a repository.
+    user_repo: My Repository Preferences
+    user_repo_message: Edit these values to set your user preferences for this repository. These values cannot be overridden.
     _singular: Preferences
     _plural: Preferences
 
