--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -334,6 +334,7 @@ en:
         unsuppressed: Archival Object <strong>%{archival_object.title}</strong> unsuppressed
         suppressed: Archival Object <strong>%{archival_object.title}</strong> suppressed
         suppressed_info: Archival Object is suppressed and cannot be edited
+        has_unpublished_ancestor: Please be aware this record has an ancestor that is unpublished.
       section:
         basic_information: Basic Information
       action:
@@ -436,6 +437,7 @@ en:
         unsuppressed: Digital Object Component <strong>%{digital_object_component.display_string}</strong> unsuppressed
         suppressed: Digital Object Component <strong>%{digital_object_component.display_string}</strong> suppressed
         suppressed_info: Digital Object Component is suppressed and cannot be edited
+        has_unpublished_ancestor: Please be aware this record has an ancestor that is unpublished.
       section:
         basic_information: Basic Information
       action:
