--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1715,6 +1715,10 @@ en:
     show_suppressed_tooltip: Whether to show suppressed records that you have permission to see when browsing.
     publish: Publish?
     publish_tooltip: Whether to publish new records by default.
+    accession_browse_label_title: Accession Title label
+    accession_browse_label_title_tooltip: Set the browse column header label for the Accession Title.
+    accession_browse_label_identifier: Accession Identifier label
+    accession_browse_label_identifier_tooltip: Set the browse column header label for Accession Identifier.
     _singular: Defaults
     _plural: Defaults
 
